force-app/main/default/objects/Account/fields/NDOC__Document_Manager_Identifier__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Document_Manager_Identifier__c</fullName>
    <description>This field is optional. It should be set to populate automatically via workflow. This field is used internally to determine which Document Manager to load based on the Type of Account that is set. When left blank, the default document manager labeled &apos;Account&apos; is displayed.</description>
    <label>Document Manager Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Special Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>