force-app/main/default/objects/Account/fields/OverviewandBackgroundCommentsNarrati__c.field-meta.xml
<CustomField>
    <fullName>OverviewandBackgroundCommentsNarrati__c</fullName>
    <label>Overview and Background Comments Narrati</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>