force-app/main/default/objects/Account/fields/PastDueInformationNarrative__c.field-meta.xml
<CustomField>
    <fullName>PastDueInformationNarrative__c</fullName>
    <label>Past Due Information Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>