force-app/main/default/objects/Account/fields/ProfitabilityNarrative__c.field-meta.xml
<CustomField>
    <fullName>ProfitabilityNarrative__c</fullName>
    <label>Profitability Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>