force-app/main/default/objects/Account/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>