force-app/main/default/objects/Account/fields/Related_entity_involvement__c.field-meta.xml
<CustomField>
    <fullName>Related_entity_involvement__c</fullName>
    <description>Counts the number of related entity involvement records with a record type = &quot;Deposit Involvement&quot; to help validate if the loan&apos;s corresponding account has an open deposit account.</description>
    <label>Related entity involvement</label>
    <summaryFilterItems>
        <field>LLC_BI__Legal_Entities__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deposit Involvement</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Legal_Entities__c.LLC_BI__Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>