force-app/main/default/objects/Account/fields/ResidingSince__c.field-meta.xml
<CustomField>
    <fullName>ResidingSince__c</fullName>
    <inlineHelpText>Since when has the business been located at this address (approximately)?</inlineHelpText>
    <label>Residing Since</label>
    <type>Date</type>
</CustomField>