force-app/main/default/objects/Account/fields/SCOC__CreditReportType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditReportType__c</fullName>
    <description>Users populate this optional picklist field to select which credit report type to pull if both types of flows are configured.</description>
    <label>Credit Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>