force-app/main/default/objects/Account/fields/Secondary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the NAICS object</description>
    <label>Secondary Industry</label>
    <referenceTo>NAICS__c</referenceTo>
    <relationshipLabel>Relationships (Secondary Industry)</relationshipLabel>
    <relationshipName>Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>