force-app/main/default/objects/Account/fields/SensitivityAnalysisIncomeStatement__c.field-meta.xml
<CustomField>
    <fullName>SensitivityAnalysisIncomeStatement__c</fullName>
    <label>Sensitivity Analysis - Income Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>