force-app/main/default/objects/Account/fields/UnsupportedBusiness__c.field-meta.xml
<CustomField>
    <fullName>UnsupportedBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsupported Business</label>
    <type>Checkbox</type>
</CustomField>