force-app/main/default/objects/Account/fields/Year_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Incorporation__c</fullName>
    <description>Zenn</description>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>