force-app/main/default/objects/Account/fields/zen_Narrative_12__c.field-meta.xml
<CustomField>
    <fullName>zen_Narrative_12__c</fullName>
    <description>Risk Rating</description>
    <label>Zen Narrative 12</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>