force-app/main/default/objects/Account/recordTypes/Business_Client.recordType-meta.xml
<RecordType>
    <fullName>Business_Client</fullName>
    <active>true</active>
    <description>Business which is stored on Jack Henry (not an individual person)</description>
    <label>Business Client</label>
</RecordType>