force-app/main/default/objects/Account/recordTypes/Business_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Business_Prospect</fullName>
    <active>true</active>
    <description>Select when creating a new prospect business account (a business or trust, not an individual person)</description>
    <label>Business Prospect</label>
</RecordType>