force-app/main/default/objects/Account/recordTypes/Credit_Group.recordType-meta.xml
<RecordType>
    <fullName>Credit_Group</fullName>
    <active>true</active>
    <description>Select &quot;Credit Group&quot; if you&apos;re adding a Credit Group relationship type.  Also referred to as an nCino Household.</description>
    <label>Credit Group</label>
</RecordType>