force-app/main/default/objects/Account/recordTypes/LLC_BI__Individual.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Individual</fullName>
    <active>true</active>
    <description>Select &quot;Individual&quot; to add an Individual relationship type.</description>
    <label>Individual</label>
</RecordType>