force-app/main/default/objects/Account/recordTypes/LLC_BI__Lender.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Lender</fullName>
    <active>true</active>
    <description>Select &quot;Lender&quot; if you are adding a Financial Institution or Institutional Investor relationship type.</description>
    <label>Lender</label>
</RecordType>