force-app/main/default/objects/Account/validationRules/PO_Box_not_Allowd_on_Physical_Address_PA.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Box_not_Allowd_on_Physical_Address_PA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(REGEX(PersonMailingStreet, &quot;(?si).*\\b(p\\.?\\s*o\\.?\\s*|.*post\\s+office)\\s+box.*&quot;),
$User.No_Validation__c = False)</errorConditionFormula>
    <errorMessage>PO Boxes are only allowed in the Mailing Address field, Please provide your Physical Address</errorMessage>
</ValidationRule>