force-app/main/default/objects/Account/validationRules/PO_Box_not_Allowed_on_Physical_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Box_not_Allowed_on_Physical_Address</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(BillingStreet, &quot;(?si).*\\b(p\\.?\\s*o\\.?\\s*|.*post\\s+office)\\s+box.*&quot;)</errorConditionFormula>
    <errorMessage>PO Boxes are only allowed in the Mailing Address field, Please provide your Physical Address</errorMessage>
</ValidationRule>